# FastApiBPT

./: .env  Dockerfile  docker-compose.yml  main.py  pyproject.toml
controllers/: controler_patient.py  controlerpatient.py  controller_user.py
entities/: user.py
shareds/database/comands/: pacienteService.py
