[tool.poetry]
name = "fastapibpt"
version = "0.1.0"
description = ""
authors = ["JairAssisDev <jairv141@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scikit-learn = "1.2.2"
fastapi = "^0.111.1"
uvicorn = "^0.30.3"
joblib = "^1.4.2"
lime = "^0.2.0.1"
pandas = "^2.2.2"
pydantic = "^2.8.2"
imblearn = "^0.0"
xlrd = "^2.0.1"
openpyxl = "^3.1.5"
pyjwt = "^2.8.0"
bcrypt = "^4.2.0"
python-dotenv = "^1.0.1"
mysql-connector-python = "^9.0.0"
matplotlib = "^3.9.1"
mysqlclient = "^2.2.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
